add shooter subtitles

--- a/Jellyfin.MeiamSub.Shooter/Jellyfin.MeiamSub.Shooter.csproj
+++ b/Jellyfin.MeiamSub.Shooter/Jellyfin.MeiamSub.Shooter.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Jellyfin.MeiamSub.Thunder</RootNamespace>
+    <RootNamespace>Jellyfin.MeiamSub.Shooter</RootNamespace>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
